package br.com.ajf.learnjavadesignpatterns.iterator;

public interface Container
{
	Iterator getIterator();
}
