package br.com.ajf.learnjavadesignpatterns.iterator;

public interface Iterator
{
	boolean hasNext();
	Object next();
}
